# CoronaResource

./: .gitignore  CMakeLists.txt  DatasmithReadFlow.txt  README.md
Examples/: CMakeLists.txt  main.cpp
Src/: CMakeLists.txt  scene_loader.h
Src/datasmith/: DataSmith解析.md
Src/datasmith/Datasmith_runtime/DatasmithCore/Private/: DatasmithSceneXmlReader.cpp
Src/datasmith_refactor/Private/: DatasmithSceneXmlReader.cpp  VisionSceneLoader.cpp
Src/datasmith_refactor/Public/: DatasmithSceneXmlReader.h  VisionSceneLoader.h
Src/mitsuba/: mitsuba.md
Src/pbrt_import/: PBRTImporter.cpp  PBRTImporter.h  SceneIR.h  pbrt_porting_plan.txt
Src/utils/: datasmith_importer.h  mitsuba_importer.cpp  pbrt_importer.h
Src/vision_scene/Private/: scene_node.cpp  transform.cpp
Src/vision_scene/Public/: geometry_data.h  normalize_adapter.h  parameter_block.h  resource_data.h  source_location.h  unified_value.h
cmake/: CoronaResourceCompiler.cmake  CoronaResourceConfig.cmake.in  CoronaResourceDependencies.cmake  CoronaResourceInstall.cmake  CoronaResourceOptions.cmake  CoronaResourceUtils.cmake  VisionSceneCompiler.cmake  VisionSceneConfig.cmake.in  VisionSceneDependencies.cmake  VisionSceneInstall.cmake  VisionSceneOptions.cmake  VisionSceneUtils.cmake
datasmith/: DOC_README.md  DataSmith解析.md  QUICK_START_EXT.md
datasmith/Plugins/DatasmithCADImporter/Content/: M_DatasmithAliasBlinn.uasset  M_DatasmithAliasBlinnTransparent.uasset  M_DatasmithAliasLambert.uasset  M_DatasmithAliasLambertTransparent.uasset  M_DatasmithAliasLightSource.uasset  M_DatasmithAliasLightSourceTransparent.uasset  M_DatasmithAliasPhong.uasset  M_DatasmithAliasPhongTransparent.uasset
datasmith/Plugins/DatasmithContent/Content/Datasmith/: AreaLightsTable.uasset
datasmith/Plugins/DatasmithImporter/Source/DatasmithImporter/Private/: DatasmithImporter.cpp
docs/: USAGE_EXAMPLE.md
examples/: CMakeLists.txt  main.cpp
examples/test_mitsuba/scenes/matpreview/: my_matpreview.xml
examples/test_mitsuba/scenes/white_furnace/: sphere.xml  white_furnace_new.xml
examples/test_scenes/: sample.pbrt
src/: CMakeLists.txt  CoronaResourceVersion.h.in  VisionSceneVersion.h.in  scene_loader.cpp
src/importer/: scene_loader.h
src/importer/import/: importer.cpp  node_desc.h  parameter_set.h
src/importer/tungsten/: Scene.hpp
src/importer/utils/private/: datasmith_importer.cpp  pbrt_importer.cpp  scene_format_detector.cpp
src/importer/utils/public/: blend_importer.h  mitsuba_importer.h  scene_format.h  scene_format_detector.h  tungsten_importer.h
src/importer/vision_scene/Private/: geometry_data.cpp
src/importer/vision_scene/Public/: enums.h  geometry_data.h  scene.h  scene_node.h  transform.h
src/pbrt/: parser.cpp  pbrt_porting_plan.txt  pbrt_scene_parse_flow.txt
src/pbrt_import/: Tokenizer.cpp  Tokenizer.h
src/resource/: CMakeLists.txt
src/resource/private/: Model.cpp
src/resource/public/: Mesh.h  Model.h  Scene.h
src/resource_manager/: CMakeLists.txt
src/tools/: tungsten2vision.py
src/utils/: blend_importer.cpp  datasmith_importer.cpp  import_factor.cpp  import_factor.h  pbrt_importer.cpp  scene_format.h  scene_format_detector.cpp  scene_format_detector.h  scene_importer.h
src/utils/private/: blend_importer.cpp  import_factor.cpp  mitsuba_importer.cpp  pbrt_importer.cpp  scene_format_detector.cpp  tungsten_importer.cpp  visionscene_importer.cpp
src/utils/public/: import_factor.h  pbrt_importer.h  scene_format.h  scene_importer.h  tungsten_importer.h  visionscene_importer.h
